Commiting project to github

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <h1>
   {{title}}
 </h1>
+
+<nav>
+	<a routerLink="/dashboard">Dashboard</a>
+	<a routerLink="/recipes">Recipes</a>
+	<a routerLink="/shoppingList">Shopping List</a>
+	<a routerLink="/calendar">Calendar</a>
+
+</nav>
+
+<router-outlet></router-outlet>
